--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+beautifulsoup4==4.6.0
+bs4==0.0.1
 certifi==2017.7.27.1
 chardet==3.0.4
 colorclass==2.2.0
 formats==0.1.1
 idna==2.6
+lxml==4.1.1
 requests==2.18.4
 six==1.11.0
 tortilla==0.4.2
